force-app/main/default/objects/maps__MarkerLayerComponent__c/maps__MarkerLayerComponent__c.object-meta.xml
<CustomObject>
    <label>Maps Marker Layer Component</label>
    <nameField>
        <displayFormat>SQC{000000}</displayFormat>
        <label>Maps Marker Layer Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maps Marker Layer Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>