force-app/main/default/objects/maps__MarkerLayerComponent__c/fields/maps__CrossField__c.field-meta.xml
<CustomField>
    <fullName>maps__CrossField__c</fullName>
    <label>Cross Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>