force-app/main/default/objects/maps__MarkerLayerComponent__c/fields/maps__CrossFilterLogic__c.field-meta.xml
<CustomField>
    <fullName>maps__CrossFilterLogic__c</fullName>
    <label>CrossFilterLogic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>