force-app/main/default/objects/maps__MarkerLayerComponent__c/fields/maps__CrossObject__c.field-meta.xml
<CustomField>
    <fullName>maps__CrossObject__c</fullName>
    <label>Cross Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>