force-app/main/default/objects/maps__MarkerLayerComponent__c/fields/maps__Field__c.field-meta.xml
<CustomField>
    <fullName>maps__Field__c</fullName>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>