force-app/main/default/objects/maps__MarkerLayerComponent__c/fields/maps__GrandparentField__c.field-meta.xml
<CustomField>
    <fullName>maps__GrandparentField__c</fullName>
    <label>Grandparent Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>