force-app/main/default/objects/maps__MarkerLayerComponent__c/fields/maps__Index__c.field-meta.xml
<CustomField>
    <fullName>maps__Index__c</fullName>
    <label>Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>