force-app/main/default/objects/maps__MarkerLayerComponent__c/fields/maps__MarkerLayer__c.field-meta.xml
<CustomField>
    <fullName>maps__MarkerLayer__c</fullName>
    <label>Maps Marker Layer</label>
    <referenceTo>maps__MarkerLayer__c</referenceTo>
    <relationshipLabel>Maps Marker Layer Components</relationshipLabel>
    <relationshipName>Marker_Layer_Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>