force-app/main/default/objects/maps__MarkerLayerComponent__c/fields/maps__Parent__c.field-meta.xml
<CustomField>
    <fullName>maps__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>maps__MarkerLayerComponent__c</referenceTo>
    <relationshipLabel>Maps Marker Layer Components</relationshipLabel>
    <relationshipName>MarkerLayerComponents</relationshipName>
    <type>Lookup</type>
</CustomField>