force-app/main/default/objects/maps__MarkerLayerComponent__c/fields/maps__ParentField__c.field-meta.xml
<CustomField>
    <fullName>maps__ParentField__c</fullName>
    <label>Parent Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>