force-app/main/default/objects/maps__MarkerLayerComponent__c/fields/maps__Type__c.field-meta.xml
<CustomField>
    <fullName>maps__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Filter</fullName>
                <default>true</default>
                <label>Filter</label>
            </value>
            <value>
                <fullName>Cross Filter</fullName>
            </value>
            <value>
                <fullName>Subfilter</fullName>
            </value>
            <value>
                <fullName>Activity Subfilter</fullName>
            </value>
            <value>
                <fullName>DeviceLayerVendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>