force-app/main/default/objects/maps__MarkerLayerComponent__c/fields/maps__Value2__c.field-meta.xml
<CustomField>
    <fullName>maps__Value2__c</fullName>
    <label>Value2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>