force-app/main/default/objects/maps__MarkerLayerComponent__c/fields/maps__Value__c.field-meta.xml
<CustomField>
    <fullName>maps__Value__c</fullName>
    <label>Value</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>